--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:iwattsdb   # Conexão do banco de dados H2 em memória
-    driver-class-name: org.h2.Driver
-    username: sa              # Nome de usuário padrão
-    password:                 # Senha padrão (vazio)
-  h2:
-    console:
-      enabled: true           # Ativa a console do H2 para acesso via navegador
+    url: jdbc:mysql://mysql-db:3306/iwattsdb
+    username: iwatts
+    password: secret
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update # ou create-drop, none, etc. dependendo da sua estratégia
+    show-sql: true # opcional, exibe as queries SQL no console
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
